--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0047.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0047.html
@@ -12,13 +12,12 @@
       <span class="ocr_line" title="bbox 957 176 1965 215">
         <span id="w_0" class="ocr_word" title="bbox 957 177 1225 213">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">PRAEFATIO</ins>
+            <ins title="nlp 2.00">PRAEFATIO</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1832 176 1965 215">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XLVn</ins>
-            <del title="nlp 0.90">XLVn</del>
+            <ins title="nlp 2.00">XLVII</ins>
           </span>
         </span>
       </span>
@@ -464,8 +463,7 @@
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1711 785 1967 843">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUigendis</ins>
-            <del title="nlp 0.90">coUigendis</del>
+            <ins title="nlp 2.00">colligendis</ins>
           </span>
         </span>
       </span>
@@ -651,8 +649,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1543 1128 1814 1175">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertiano.</ins>
-            <del title="nlp 0.90">Laertiano.</del>
+            <ins title="nlp 2.00">Laërtiano.</ins>
           </span>
         </span>
       </span>
@@ -677,8 +674,7 @@
         </span>
         <span id="w_108" class="ocr_word" title="bbox 855 1209 1075 1252">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_109" class="ocr_word" title="bbox 1103 1208 1334 1266">
@@ -918,8 +914,7 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1535 1498 1755 1542">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 1787 1515 1809 1543">
@@ -1131,8 +1126,7 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 639 1785 942 1839">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pervenenmt,</ins>
-            <del title="nlp 0.90">pervenenmt,</del>
+            <ins title="nlp 2.00">pervenerunt,</ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 973 1783 1151 1825">
@@ -1299,8 +1293,7 @@
         </span>
         <span id="w_211" class="ocr_word" title="bbox 675 1997 836 2040">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_212" class="ocr_word" title="bbox 869 2012 999 2053">
@@ -2103,8 +2096,7 @@
       <span class="ocr_line" title="bbox 222 2996 1968 3057">
         <span id="w_348" class="ocr_word" title="bbox 222 2996 312 3039">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uUa</ins>
-            <del title="nlp 0.90">uUa</del>
+            <ins title="nlp 2.00">ulla</ins>
           </span>
         </span>
         <span id="w_349" class="ocr_word" title="bbox 342 3011 434 3040">
@@ -2207,8 +2199,7 @@
         </span>
         <span id="w_365" class="ocr_word" title="bbox 1794 3072 1966 3117">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertio</ins>
-            <del title="nlp 0.90">Laertio</del>
+            <ins title="nlp 2.00">Laërtio</ins>
           </span>
         </span>
       </span>
