--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0048.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0048.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 350 194 1350 233">
         <span id="w_0" class="ocr_word" title="bbox 350 196 500 233">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XLVm</ins>
-            <del title="nlp 0.90">XLVm</del>
+            <ins title="nlp 2.00">XLVIII</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1085 194 1350 230">
@@ -34,9 +33,14 @@
             <ins class="alt" title="nlp 1.00">λογικοῦ</ins>
           </span>
         </span>
-        <span id="w_4" class="ocr_word" title="bbox 671 304 824 347" lang="grc">
+        <span id="w_4_0" class="ocr_word" title="bbox 671 304 824 347">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἓνδεκα</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_4_1" class="ocr_word" title="bbox 671 304 824 347">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἕνδεκα</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 850 301 922 345" lang="grc">
@@ -67,15 +71,9 @@
             <del title="nlp 0.90">enumerati</del>
           </span>
         </span>
-        <span id="w_10" class="ocr_word" title="bbox 1821 303 1933 359">
+        <span id="w_10_0" class="ocr_word" title="bbox 1821 303 1933 359">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">apud</ins>
-            <del title="nlp 0.90">apud</del>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1958 303 2082 346">
-          <span class="alternatives">
-            <ins title="nlp 2.00">  Laërtium</ins>
+            <ins class="alt" title="nlp 2.00">apud</ins>
           </span>
         </span>
       </span>
@@ -643,8 +641,7 @@
         </span>
         <span id="w_111" class="ocr_word" title="bbox 633 1086 739 1127">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(rov</ins>
-            <del title="nlp 0.90">(rov</del>
+            <ins title="nlp 2.00">&amp;#x003C;τοῦ</ins>
           </span>
         </span>
         <span id="w_112" class="ocr_word" title="bbox 769 1081 867 1137" lang="grc">
@@ -672,29 +669,18 @@
             <ins class="alt" title="nlp 1.00">λογικῶν</ins>
           </span>
         </span>
-        <span id="w_117" class="ocr_word" title="bbox 1670 1077 1895 1133" lang="grc">
+        <span id="w_117_0" class="ocr_word" title="bbox 1670 1077 1895 1133">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐννοιῶν&gt;.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_118" class="ocr_word" title="bbox 1958 1078 2084 1129">
+        <span id="w_117_1" class="ocr_word" title="bbox 1670 1077 1895 1133">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Quat-</ins>
+            <ins class="alt" title="nlp 2.00">ἐννοιῶν&amp;#x003E;.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 351 1148 2086 1207">
-        <span id="w_119" class="ocr_word" title="bbox 351 1158 450 1197">
-          <span class="alternatives">
-            <ins title="nlp 2.00">praetuor</ins>
-          </span>
-        </span>
-        <span id="w_120" class="ocr_word" title="bbox 474 1156 617 1196">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">autem</ins>
-            <del title="nlp 0.90">autem</del>
-          </span>
-        </span>
         <span id="w_121" class="ocr_word" title="bbox 643 1152 730 1194">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">illis</ins>
@@ -736,20 +722,18 @@
             <ins title="nlp 2.00">egi</ins>
           </span>
         </span>
-        <span id="w_128" class="ocr_word" title="bbox 1816 1148 1943 1191">
+        <span id="w_128_0" class="ocr_word" title="bbox 1816 1148 1943 1191">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">huius</ins>
-            <del title="nlp 0.90">huius</del>
+            <ins class="alt" title="nlp 2.00">huius</ins>
+          </span>
+        </span>
+        <span id="w_128_1" class="ocr_word" title="bbox 1816 1148 1943 1191">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">praefationis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 350 1222 719 1280">
-        <span id="w_130" class="ocr_word" title="bbox 350 1225 526 1267">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fationis</ins>
-            <del title="nlp 0.90">praefationis</del>
-          </span>
-        </span>
         <span id="w_131" class="ocr_word" title="bbox 557 1239 597 1280">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">p.</ins>
