--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0057.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0057.html
@@ -328,9 +328,14 @@
             <ins title="nlp 2.00">μ’</ins>
           </span>
         </span>
-        <span id="w_62" class="ocr_word" title="bbox 900 637 1068 689" lang="grc">
+        <span id="w_62_0" class="ocr_word" title="bbox 900 637 1068 689">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀΰεις;“</ins>
+            <ins class="alt" title="nlp 2.00">ἀΰεις;“</ins>
+          </span>
+        </span>
+        <span id="w_62_1" class="ocr_word" title="bbox 900 637 1068 689">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1099 635 1171 680" lang="grc">
@@ -346,11 +351,6 @@
         <span id="w_65" class="ocr_word" title="bbox 1493 636 1787 692" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐτελεύτησεν,</ins>
-          </span>
-        </span>
-        <span id="w_66" class="ocr_word" title="bbox 1820 635 2005 679" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀποπνίξας</ins>
           </span>
         </span>
       </span>
@@ -470,8 +470,7 @@
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1475 851 1634 894">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_92" class="ocr_word" title="bbox 1661 851 2004 908">
@@ -768,7 +767,7 @@
         </span>
         <span id="w_149" class="ocr_word" title="bbox 1254 1283 1401 1338" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὄμνυε</ins>
+            <ins title="nlp 2.00">ὤμνυε</ins>
           </span>
         </span>
         <span id="w_150" class="ocr_word" title="bbox 1428 1283 1491 1337" lang="grc">
@@ -838,14 +837,12 @@
         </span>
         <span id="w_162" class="ocr_word" title="bbox 669 1425 806 1469">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert,</ins>
-            <del title="nlp 0.90">Laert,</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_163" class="ocr_word" title="bbox 834 1424 918 1468">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">VU</ins>
-            <del title="nlp 0.90">VU</del>
+            <ins title="nlp 2.00">VII</ins>
           </span>
         </span>
         <span id="w_164" class="ocr_word" title="bbox 943 1425 1007 1468">
@@ -1122,7 +1119,7 @@
         </span>
         <span id="w_217" class="ocr_word" title="bbox 1223 1871 1297 1911" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἴτη</ins>
+            <ins title="nlp 2.00">ἔτη</ins>
           </span>
         </span>
         <span id="w_218" class="ocr_word" title="bbox 1330 1856 1472 1898" lang="grc">
@@ -1249,14 +1246,9 @@
             <ins class="alt" title="nlp 1.00">παρακαλῶν</ins>
           </span>
         </span>
-        <span id="w_242" class="ocr_word" title="bbox 1814 1997 1867 2041" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐπ</ins>
-          </span>
-        </span>
         <span id="w_243" class="ocr_word" title="bbox 1878 1997 1888 2013">
           <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins title="nlp 2.00">ἐπ’</ins>
           </span>
         </span>
         <span id="w_244" class="ocr_word" title="bbox 1902 2014 1998 2053" lang="grc">
@@ -1998,9 +1990,14 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_388" class="ocr_word" title="bbox 803 3048 980 3098" lang="grc">
+        <span id="w_388_0" class="ocr_word" title="bbox 803 3048 980 3098">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἄλλων&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἄλλων&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_388_1" class="ocr_word" title="bbox 803 3048 980 3098">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_389" class="ocr_word" title="bbox 1007 3050 1064 3085" lang="grc">
@@ -2031,11 +2028,6 @@
         <span id="w_394" class="ocr_word" title="bbox 1793 3050 1834 3082">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">21</ins>
-          </span>
-        </span>
-        <span id="w_395" class="ocr_word" title="bbox 1863 3045 1999 3092" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Κράτης</ins>
           </span>
         </span>
       </span>
