--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0058.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0058.html
@@ -180,9 +180,9 @@
             <ins class="alt" title="nlp 1.00">Ζήνωνος</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 1983 514 2076 568" lang="grc">
+        <span id="w_32_0" class="ocr_word" title="bbox 1983 514 2076 568">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀρί-</ins>
+            <ins class="alt" title="nlp 2.00">ἀρίδηλά</ins>
           </span>
         </span>
       </span>
@@ -190,11 +190,6 @@
         <span id="w_33" class="ocr_word" title="bbox 308 597 324 623">
           <span class="alternatives">
             <ins title="nlp 2.00">5</ins>
-          </span>
-        </span>
-        <span id="w_34" class="ocr_word" title="bbox 345 580 455 635" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δῆλά</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 487 596 532 622" lang="grc">
@@ -459,9 +454,9 @@
             <ins title="nlp 2.00">b).</ins>
           </span>
         </span>
-        <span id="w_85" class="ocr_word" title="bbox 1871 866 2079 922" lang="grc">
+        <span id="w_85_0" class="ocr_word" title="bbox 1871 866 2079 922">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πολέμω-</ins>
+            <ins class="alt" title="nlp 2.00">Πολέμωνος</ins>
           </span>
         </span>
       </span>
@@ -1064,14 +1059,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_206" class="ocr_word" title="bbox 1790 1652 1974 1706" lang="grc">
+        <span id="w_206_0" class="ocr_word" title="bbox 1790 1652 1974 1706">
           <span class="alternatives">
-            <ins title="nlp 2.00">ῥὴτορος</ins>
+            <ins class="alt" title="nlp 2.00">ῥήτορος</ins>
           </span>
         </span>
-        <span id="w_207" class="ocr_word" title="bbox 2005 1649 2087 1693" lang="grc">
+        <span id="w_206_1" class="ocr_word" title="bbox 1790 1652 1974 1706">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐκ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1288,9 +1283,9 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_249" class="ocr_word" title="bbox 1902 1933 2089 1990" lang="grc">
+        <span id="w_249_0" class="ocr_word" title="bbox 1902 1933 2089 1990">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀρκεσι-</ins>
+            <ins class="alt" title="nlp 2.00">Ἀρκεσιλάου,</ins>
           </span>
         </span>
       </span>
@@ -1298,11 +1293,6 @@
         <span id="w_250" class="ocr_word" title="bbox 296 2020 328 2047">
           <span class="alternatives">
             <ins title="nlp 2.00">25</ins>
-          </span>
-        </span>
-        <span id="w_251" class="ocr_word" title="bbox 349 2005 473 2060" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λάου,</ins>
           </span>
         </span>
         <span id="w_252" class="ocr_word" title="bbox 503 2006 557 2047" lang="grc">
@@ -1508,16 +1498,11 @@
         </span>
         <span id="w_291" class="ocr_word" title="bbox 1902 2218 2089 2274" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀποσχό-</ins>
+            <ins title="nlp 2.00">ἀποσχόμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 349 2289 2090 2347">
-        <span id="w_292" class="ocr_word" title="bbox 349 2305 480 2346" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενος</ins>
-          </span>
-        </span>
         <span id="w_293" class="ocr_word" title="bbox 510 2306 589 2333" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
@@ -1565,7 +1550,7 @@
         </span>
         <span id="w_302" class="ocr_word" title="bbox 1981 2290 2090 2346" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">[τῶν</ins>
           </span>
         </span>
       </span>
@@ -1577,12 +1562,12 @@
         </span>
         <span id="w_304" class="ocr_word" title="bbox 352 2363 581 2416" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Στωικῶν]</ins>
+            <ins title="nlp 2.00">Στωϊκῶν]</ins>
           </span>
         </span>
         <span id="w_305" class="ocr_word" title="bbox 615 2361 851 2417" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολέμοιο</ins>
+            <ins title="nlp 2.00">„πολέμοιο</ins>
           </span>
         </span>
         <span id="w_306" class="ocr_word" title="bbox 877 2362 988 2418" lang="grc">
@@ -1600,9 +1585,14 @@
             <ins title="nlp 2.00">πευκεδανοῖο“</ins>
           </span>
         </span>
-        <span id="w_309" class="ocr_word" title="bbox 1526 2360 1591 2418" lang="grc">
+        <span id="w_309_0" class="ocr_word" title="bbox 1526 2360 1591 2418">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Κ 8)</ins>
+            <ins class="alt" title="nlp 2.00">(Κ</ins>
+          </span>
+        </span>
+        <span id="w_309_1" class="ocr_word" title="bbox 1526 2360 1591 2418">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">8)</ins>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 1682 2361 1953 2417" lang="grc">
@@ -1634,7 +1624,7 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 878 2432 988 2489" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ]</ins>
+            <ins title="nlp 2.00">[καὶ]</ins>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1021 2432 1121 2489" lang="grc">
@@ -1691,7 +1681,7 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 806 2504 1048 2561" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδαμῶς]</ins>
+            <ins title="nlp 2.00">[οὐδαμῶς]</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1081 2503 1465 2560" lang="grc">
@@ -2110,9 +2100,14 @@
             <ins class="alt" title="nlp 1.00">ἐπεχείρησεν</ins>
           </span>
         </span>
-        <span id="w_407" class="ocr_word" title="bbox 1093 3049 1214 3097">
+        <span id="w_407_0" class="ocr_word" title="bbox 1093 3049 1214 3097">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἰς&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;εἰς&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_407_1" class="ocr_word" title="bbox 1093 3049 1214 3097">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_408" class="ocr_word" title="bbox 1314 3052 1358 3083">
@@ -2140,11 +2135,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">vulgo.</ins>
             <del title="nlp 0.90">vulgo.</del>
-          </span>
-        </span>
-        <span id="w_413" class="ocr_word" title="bbox 2079 3049 2091 3096">
-          <span class="alternatives">
-            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
       </span>
@@ -2183,7 +2173,7 @@
         </span>
         <span id="w_420" class="ocr_word" title="bbox 1085 3105 1261 3140" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Στωικῶν</ins>
+            <ins title="nlp 2.00">Στωϊκῶν</ins>
           </span>
         </span>
         <span id="w_421" class="ocr_word" title="bbox 1288 3102 1433 3138">
