--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0059.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0059.html
@@ -119,7 +119,7 @@
       <span class="ocr_line" title="bbox 288 424 2036 486">
         <span id="w_20" class="ocr_word" title="bbox 430 430 513 486" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὶν</ins>
+            <ins title="nlp 2.00">μὲν</ins>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 543 432 720 486" lang="grc">
@@ -147,9 +147,14 @@
             <ins title="nlp 2.00">ἔχων</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 1382 426 1506 484" lang="grc">
+        <span id="w_26_0" class="ocr_word" title="bbox 1382 426 1506 484">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀλλ’</ins>
+            <ins class="alt" title="nlp 2.00">(ἀλλ᾿</ins>
+          </span>
+        </span>
+        <span id="w_26_1" class="ocr_word" title="bbox 1382 426 1506 484">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1524 426 1606 471" lang="grc">
@@ -165,11 +170,6 @@
         <span id="w_29" class="ocr_word" title="bbox 1848 427 1957 483" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τάχα</ins>
-          </span>
-        </span>
-        <span id="w_30" class="ocr_word" title="bbox 1987 424 2036 471" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -224,9 +224,9 @@
             <ins class="alt" title="nlp 1.00">Πλάτωνα</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 1896 498 2037 542" lang="grc">
+        <span id="w_41_0" class="ocr_word" title="bbox 1896 498 2037 542">
           <span class="alternatives">
-            <ins title="nlp 2.00">μάκει</ins>
+            <ins class="alt" title="nlp 2.00">ἐσκιαμάχει</ins>
           </span>
         </span>
       </span>
@@ -424,7 +424,7 @@
         </span>
         <span id="w_80" class="ocr_word" title="bbox 998 857 1018 901">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
+            <ins title="nlp 2.00">Ι</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1038 859 1106 902" lang="grc">
@@ -446,8 +446,7 @@
         </span>
         <span id="w_84" class="ocr_word" title="bbox 1582 858 1834 901">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">audiverarU</ins>
-            <del title="nlp 0.90">audiverarU</del>
+            <ins title="nlp 2.00">audiverant</ins>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 1863 857 2041 901">
@@ -495,8 +494,7 @@
         </span>
         <span id="w_92" class="ocr_word" title="bbox 1189 930 1424 974">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ArcesHam</ins>
-            <del title="nlp 0.90">ArcesHam</del>
+            <ins title="nlp 2.00">Arcesilam</ins>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1462 933 1638 973">
@@ -510,14 +508,14 @@
             <ins title="nlp 2.00">aetate</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 1843 929 2040 983" lang="grc">
+        <span id="w_95_0" class="ocr_word" title="bbox 1843 929 2040 983">
           <span class="alternatives">
-            <ins title="nlp 2.00">yaldeque</ins>
+            <ins class="alt" title="nlp 2.00">valdeque</ins>
           </span>
         </span>
-        <span id="w_96" class="ocr_word" title="bbox 2061 945 2093 972">
+        <span id="w_95_1" class="ocr_word" title="bbox 1843 929 2040 983">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -592,8 +590,7 @@
         </span>
         <span id="w_108" class="ocr_word" title="bbox 675 1074 835 1118">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">finibuB</ins>
-            <del title="nlp 0.90">finibuB</del>
+            <ins title="nlp 2.00">finibus</ins>
           </span>
         </span>
         <span id="w_109" class="ocr_word" title="bbox 867 1074 930 1117">
@@ -658,7 +655,7 @@
         </span>
         <span id="w_120" class="ocr_word" title="bbox 713 1161 786 1190" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀᾶ</ins>
+            <ins title="nlp 2.00">cur</ins>
           </span>
         </span>
         <span id="w_121" class="ocr_word" title="bbox 817 1147 869 1190">
@@ -1063,8 +1060,7 @@
         </span>
         <span id="w_189" class="ocr_word" title="bbox 2064 1662 2098 1688">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">jo</ins>
-            <del title="nlp 0.90">jo</del>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1112,8 +1108,7 @@
         </span>
         <span id="w_197" class="ocr_word" title="bbox 1625 1719 1747 1762">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ulum</ins>
-            <del title="nlp 0.90">Ulum</del>
+            <ins title="nlp 2.00">illum</ins>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1771 1733 1930 1773">
@@ -1143,8 +1138,7 @@
         </span>
         <span id="w_203" class="ocr_word" title="bbox 915 1792 1187 1836">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">suaderUihus</ins>
-            <del title="nlp 0.90">suaderUihus</del>
+            <ins title="nlp 2.00">suadentibus</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 1210 1806 1261 1835">
@@ -1270,8 +1264,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 2064 2020 2098 2047">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">n</ins>
-            <del title="nlp 0.90">n</del>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1481,8 +1474,7 @@
       <span class="ocr_line" title="bbox 644 2505 1532 2565">
         <span id="w_262" class="ocr_word" title="bbox 644 2512 927 2565">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ZrivavLxdi</ins>
-            <del title="nlp 0.90">ZrivavLxdi</del>
+            <ins title="nlp 2.00">Zηνωντκῷ</ins>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 958 2508 1220 2565" lang="grc">
@@ -1877,8 +1869,7 @@
         </span>
         <span id="w_339" class="ocr_word" title="bbox 734 3110 878 3156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">BcripBi,</ins>
-            <del title="nlp 0.90">BcripBi,</del>
+            <ins title="nlp 2.00">scripsi,</ins>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 905 3112 1122 3146" lang="grc">
@@ -1894,7 +1885,7 @@
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1369 3113 1390 3145">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
         <span id="w_343" class="ocr_word" title="bbox 1417 3112 1537 3154" lang="grc">
@@ -1934,8 +1925,7 @@
         </span>
         <span id="w_349" class="ocr_word" title="bbox 595 3164 764 3211">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Bentiey.</ins>
-            <del title="nlp 0.90">Bentiey.</del>
+            <ins title="nlp 2.00">Bentley.</ins>
           </span>
         </span>
         <span id="w_350" class="ocr_word" title="bbox 815 3164 869 3201">
@@ -1969,14 +1959,12 @@
         </span>
         <span id="w_355" class="ocr_word" title="bbox 1296 3168 1401 3201">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cuMte</ins>
-            <del title="nlp 0.90">cuMte</del>
+            <ins title="nlp 2.00">acute</ins>
           </span>
         </span>
         <span id="w_356" class="ocr_word" title="bbox 1425 3164 1643 3201">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mooebcUur,</ins>
-            <del title="nlp 0.90">mooebcUur,</del>
+            <ins title="nlp 2.00">movebatur.</ins>
           </span>
         </span>
       </span>
