--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0060.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0060.html
@@ -74,11 +74,6 @@
             <ins class="alt" title="nlp 1.00">μὴ</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 1928 309 2032 348" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀγα-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 295 372 482 407">
         <span id="w_13" class="ocr_word" title="bbox 295 372 482 407" lang="grc">
@@ -101,8 +96,7 @@
         </span>
         <span id="w_16" class="ocr_word" title="bbox 749 434 885 476">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 901 432 986 476">
@@ -411,7 +405,7 @@
         </span>
         <span id="w_75" class="ocr_word" title="bbox 1376 875 1417 902" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἱ</ins>
+            <ins title="nlp 2.00">oἳ</ins>
           </span>
         </span>
         <span id="w_76" class="ocr_word" title="bbox 1449 857 1549 915" lang="grc">
@@ -477,8 +471,7 @@
         </span>
         <span id="w_88" class="ocr_word" title="bbox 667 1003 804 1048">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 833 1001 914 1045">
@@ -521,8 +514,7 @@
         </span>
         <span id="w_96" class="ocr_word" title="bbox 1964 1002 2038 1045">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xai</ins>
-            <del title="nlp 0.90">xai</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -564,7 +556,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1434 1074 1581 1129" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὄφρα</ins>
+            <ins title="nlp 2.00">„ὄφρα</ins>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1614 1098 1667 1103">
@@ -598,8 +590,7 @@
         </span>
         <span id="w_110" class="ocr_word" title="bbox 946 1144 1034 1188">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">SiU.</ins>
-            <del title="nlp 0.90">SiU.</del>
+            <ins title="nlp 2.00">Sill.</ins>
           </span>
         </span>
         <span id="w_111" class="ocr_word" title="bbox 1068 1145 1119 1187">
@@ -745,8 +736,7 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 577 1432 714 1474">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 740 1430 824 1474">
@@ -1274,14 +1264,24 @@
             <ins class="alt" title="nlp 1.00">ὅμοιον,</ins>
           </span>
         </span>
-        <span id="w_238" class="ocr_word" title="bbox 870 2144 1010 2201" lang="grc">
+        <span id="w_238_0" class="ocr_word" title="bbox 870 2144 1010 2201">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐ | τῷ</ins>
+            <ins class="alt" title="nlp 2.00">αὐ</ins>
           </span>
         </span>
-        <span id="w_239" class="ocr_word" title="bbox 1055 2146 1336 2199" lang="grc">
+        <span id="w_238_1" class="ocr_word" title="bbox 870 2144 1010 2201">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φιλονεικίαν</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_239_0" class="ocr_word" title="bbox 1055 2146 1336 2199">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
+          </span>
+        </span>
+        <span id="w_239_1" class="ocr_word" title="bbox 1055 2146 1336 2199">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">φιλονεικίαν</ins>
           </span>
         </span>
         <span id="w_240" class="ocr_word" title="bbox 1382 2143 1537 2198" lang="grc">
@@ -1326,9 +1326,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_248" class="ocr_word" title="bbox 743 2216 790 2274" lang="grc">
+        <span id="w_248_0" class="ocr_word" title="bbox 743 2216 790 2274">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δ’)</ins>
+            <ins class="alt" title="nlp 2.00">(δ᾿)</ins>
+          </span>
+        </span>
+        <span id="w_248_1" class="ocr_word" title="bbox 743 2216 790 2274">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_250" class="ocr_word" title="bbox 851 2217 994 2272" lang="grc">
@@ -1336,14 +1341,19 @@
             <ins class="alt" title="nlp 1.00">ἄνδρα</ins>
           </span>
         </span>
-        <span id="w_251" class="ocr_word" title="bbox 1026 2220 1118 2258" lang="grc">
+        <span id="w_251_0" class="ocr_word" title="bbox 1026 2220 1118 2258">
           <span class="alternatives">
-            <ins title="nlp 2.00">θαυ | μάξειν</ins>
+            <ins class="alt" title="nlp 2.00">θαυ</ins>
+          </span>
+        </span>
+        <span id="w_251_1" class="ocr_word" title="bbox 1026 2220 1118 2258">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 1326 2212 1398 2256" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">μάζειν καὶ</ins>
           </span>
         </span>
         <span id="w_254" class="ocr_word" title="bbox 1430 2211 1601 2269" lang="grc">
@@ -1356,14 +1366,14 @@
             <ins title="nlp 2.00">καθ’</ins>
           </span>
         </span>
-        <span id="w_257" class="ocr_word" title="bbox 1757 2228 1786 2254" lang="grc">
+        <span id="w_257_0" class="ocr_word" title="bbox 1757 2228 1786 2254">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑ</ins>
+            <ins class="alt" title="nlp 2.00">ὑ</ins>
           </span>
         </span>
-        <span id="w_258" class="ocr_word" title="bbox 1798 2210 1801 2267" lang="grc">
+        <span id="w_257_1" class="ocr_word" title="bbox 1757 2228 1786 2254">
           <span class="alternatives">
-            <ins title="nlp 2.00">| περβολήν.</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
       </span>
@@ -1486,8 +1496,7 @@
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1651 2354 1861 2397">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Biicheler.</ins>
-            <del title="nlp 0.90">Biicheler.</del>
+            <ins title="nlp 2.00">Βücheler.</ins>
           </span>
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1922 2353 2047 2396">
@@ -1559,12 +1568,12 @@
         </span>
         <span id="w_293" class="ocr_word" title="bbox 1227 2497 1475 2557" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποιή)σειν</ins>
+            <ins title="nlp 2.00">„ποιή)σειν</ins>
           </span>
         </span>
         <span id="w_294" class="ocr_word" title="bbox 1516 2496 1638 2555" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γ)ὰρ</ins>
+            <ins title="nlp 2.00">(γ)ὰρ</ins>
           </span>
         </span>
         <span id="w_295" class="ocr_word" title="bbox 1684 2494 2048 2553" lang="grc">
@@ -1589,9 +1598,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_299" class="ocr_word" title="bbox 622 2573 745 2631" lang="grc">
+        <span id="w_299_0" class="ocr_word" title="bbox 622 2573 745 2631">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοὺς</ins>
+            <ins class="alt" title="nlp 2.00">τ(οὺς</ins>
+          </span>
+        </span>
+        <span id="w_299_1" class="ocr_word" title="bbox 622 2573 745 2631">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_300" class="ocr_word" title="bbox 788 2571 1117 2631" lang="grc">
@@ -1609,20 +1623,24 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_303" class="ocr_word" title="bbox 1377 2575 1545 2625" lang="grc">
+        <span id="w_303_0" class="ocr_word" title="bbox 1377 2575 1545 2625">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θύραν·</ins>
+            <ins class="alt" title="nlp 2.00">θύραν·</ins>
           </span>
         </span>
-        <span id="w_304" class="ocr_word" title="bbox 1590 2567 1844 2625" lang="grc">
+        <span id="w_303_1" class="ocr_word" title="bbox 1377 2575 1545 2625">
           <span class="alternatives">
-            <ins title="nlp 2.00">δια | πορῶν</ins>
+            <ins class="alt" title="nlp 2.00">δια</ins>
           </span>
         </span>
-        <span id="w_305" class="ocr_word" title="bbox 1875 2566 2047 2610">
+        <span id="w_304_0" class="ocr_word" title="bbox 1590 2567 1844 2625">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’Bnov</ins>
-            <del title="nlp 0.90">’Bnov</del>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_304_1" class="ocr_word" title="bbox 1590 2567 1844 2625">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">πορῶν</ins>
           </span>
         </span>
       </span>
@@ -1637,14 +1655,24 @@
             <ins class="alt" title="nlp 1.00">θῇ,</ins>
           </span>
         </span>
-        <span id="w_308" class="ocr_word" title="bbox 526 2644 677 2704" lang="grc">
+        <span id="w_308_0" class="ocr_word" title="bbox 526 2644 677 2704">
           <span class="alternatives">
-            <ins title="nlp 2.00">μό | λις</ins>
+            <ins class="alt" title="nlp 2.00">μό</ins>
           </span>
         </span>
-        <span id="w_309" class="ocr_word" title="bbox 708 2646 764 2688" lang="grc">
+        <span id="w_308_1" class="ocr_word" title="bbox 526 2644 677 2704">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄν</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_309_0" class="ocr_word" title="bbox 708 2646 764 2688">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λις</ins>
+          </span>
+        </span>
+        <span id="w_309_1" class="ocr_word" title="bbox 708 2646 764 2688">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἄν</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 807 2656 917 2701" lang="grc">
@@ -1704,14 +1732,24 @@
             <ins class="alt" title="nlp 1.00">κακόν·</ins>
           </span>
         </span>
-        <span id="w_321" class="ocr_word" title="bbox 510 2717 592 2761" lang="grc">
+        <span id="w_321_0" class="ocr_word" title="bbox 510 2717 592 2761">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐκ</ins>
+            <ins class="alt" title="nlp 2.00">οὐκ</ins>
           </span>
         </span>
-        <span id="w_322" class="ocr_word" title="bbox 635 2717 839 2772" lang="grc">
+        <span id="w_321_1" class="ocr_word" title="bbox 510 2717 592 2761">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἔ | σεσθαι</ins>
+            <ins class="alt" title="nlp 2.00">ἔ</ins>
+          </span>
+        </span>
+        <span id="w_322_0" class="ocr_word" title="bbox 635 2717 839 2772">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_322_1" class="ocr_word" title="bbox 635 2717 839 2772">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">σεσθαι</ins>
           </span>
         </span>
         <span id="w_323" class="ocr_word" title="bbox 882 2712 1196 2773" lang="grc">
@@ -1746,14 +1784,24 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 313 2780 2045 2846">
-        <span id="w_329" class="ocr_word" title="bbox 313 2784 533 2846">
+        <span id="w_329_0" class="ocr_word" title="bbox 313 2784 533 2846">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ζ(ή)|νων</ins>
+            <ins class="alt" title="nlp 2.00">Ζ(ή)</ins>
           </span>
         </span>
-        <span id="w_330" class="ocr_word" title="bbox 563 2804 676 2844" lang="grc">
+        <span id="w_329_1" class="ocr_word" title="bbox 313 2784 533 2846">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρὸς</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_330_0" class="ocr_word" title="bbox 563 2804 676 2844">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">νων</ins>
+          </span>
+        </span>
+        <span id="w_330_1" class="ocr_word" title="bbox 563 2804 676 2844">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">πρὸς</ins>
           </span>
         </span>
         <span id="w_331" class="ocr_word" title="bbox 706 2803 810 2838" lang="grc">
@@ -1778,7 +1826,7 @@
         </span>
         <span id="w_335" class="ocr_word" title="bbox 1436 2785 1508 2838" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τί</ins>
+            <ins title="nlp 2.00">„τί</ins>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 1544 2780 1722 2839" lang="grc">
@@ -1806,7 +1854,7 @@
       <span class="ocr_line" title="bbox 429 2933 1858 2988">
         <span id="w_342" class="ocr_word" title="bbox 429 2946 450 2978">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
         <span id="w_343" class="ocr_word" title="bbox 477 2940 683 2988" lang="grc">
@@ -1890,7 +1938,7 @@
         </span>
         <span id="w_357" class="ocr_word" title="bbox 1272 2993 1411 3038" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χαλκίς.</ins>
+            <ins title="nlp 2.00">χαλκισ.</ins>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1438 3001 1523 3036">
