--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0128.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0128.html
@@ -499,7 +499,7 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 946 944 1078 999" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἀλλ’</ins>
+            <ins title="nlp 2.00">ἀλλ’</ins>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1097 945 1203 987" lang="grc">
@@ -564,7 +564,7 @@
         </span>
         <span id="w_109" class="ocr_word" title="bbox 832 1087 970 1129">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 991 1085 1075 1128">
@@ -726,7 +726,7 @@
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1977 1298 2084 1356">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἇρ'</ins>
+            <ins title="nlp 2.00">ἇρ'</ins>
           </span>
         </span>
       </span>
@@ -833,7 +833,7 @@
         </span>
         <span id="w_160" class="ocr_word" title="bbox 832 1514 970 1556">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_161" class="ocr_word" title="bbox 991 1513 1075 1556">
@@ -1251,7 +1251,7 @@
         </span>
         <span id="w_235" class="ocr_word" title="bbox 833 2155 970 2197">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 996 2154 1039 2197">
@@ -1679,16 +1679,11 @@
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1835 2724 2079 2781" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀποτυγχά-</ins>
+            <ins title="nlp 2.00">ἀποτυγχάνοντες</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 348 2794 1484 2852">
-        <span id="w_318" class="ocr_word" title="bbox 348 2812 501 2846" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νοντες</ins>
-          </span>
-        </span>
         <span id="w_319" class="ocr_word" title="bbox 532 2794 699 2851" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκείνης</ins>
@@ -1730,13 +1725,12 @@
         </span>
         <span id="w_326" class="ocr_word" title="bbox 690 2867 826 2909">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 840 2866 883 2909" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">Π</ins>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 897 2868 963 2909">
@@ -1840,7 +1834,7 @@
         </span>
         <span id="w_345" class="ocr_word" title="bbox 1217 2937 1409 2996">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">(Hense).</ins>
+            <ins title="nlp 2.00">(Hense).</ins>
           </span>
         </span>
       </span>
@@ -1852,10 +1846,7 @@
         </span>
         <span id="w_347" class="ocr_word" title="bbox 537 3055 612 3102" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">τε]</ins>
-            <del title="nlp 0.90">τεο</del>
-            <del title="nlp 0.89">τευ</del>
-            <del title="nlp 0.88">τεὰ</del>
+            <ins title="nlp 2.00">ὄτε]</ins>
           </span>
         </span>
         <span id="w_348" class="ocr_word" title="bbox 645 3069 708 3091" lang="grc">
@@ -1865,7 +1856,7 @@
         </span>
         <span id="w_349" class="ocr_word" title="bbox 732 3054 803 3099">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">6L,</ins>
+            <ins title="nlp 2.00">BL,</ins>
           </span>
         </span>
         <span id="w_350" class="ocr_word" title="bbox 843 3068 899 3090" lang="grc">
@@ -1881,13 +1872,12 @@
         </span>
         <span id="w_352" class="ocr_word" title="bbox 999 3055 1115 3090">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">litora</ins>
-            <del title="nlp 0.90">litora</del>
+            <ins title="nlp 2.00">litura</ins>
           </span>
         </span>
         <span id="w_353" class="ocr_word" title="bbox 1138 3055 1195 3090">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">P^.</ins>
+            <ins title="nlp 2.00">P3.</ins>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 1319 3060 1362 3090">
@@ -1897,10 +1887,7 @@
         </span>
         <span id="w_355" class="ocr_word" title="bbox 1386 3054 1582 3100" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Ἀρκεσίλᾳ</ins>
-            <del title="nlp 0.90">Ἀρκεσίλαε</del>
-            <del title="nlp 0.89">Ἀρκεσίλας</del>
-            <del title="nlp 0.88">Ἀρκεσιλάῳ</del>
+            <ins title="nlp 2.00">Ἀρκέσιλαι</ins>
           </span>
         </span>
         <span id="w_356" class="ocr_word" title="bbox 1606 3056 1646 3091">
@@ -1911,15 +1898,12 @@
         </span>
         <span id="w_357" class="ocr_word" title="bbox 1770 3059 1813 3091">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">16</ins>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1838 3054 2078 3101" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Ἀκαδημικὸν</ins>
-            <del title="nlp 0.90">Ἀκαδημικὴν</del>
-            <del title="nlp 0.89">Ἀκαδημικήν</del>
-            <del title="nlp 0.88">Ἀκαδημικὸς</del>
+            <ins title="nlp 2.00">Ἀκαδημικὸν</ins>
           </span>
         </span>
       </span>
@@ -1975,7 +1959,7 @@
         </span>
         <span id="w_368" class="ocr_word" title="bbox 1212 3111 1224 3155">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">||</ins>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_369" class="ocr_word" title="bbox 1262 3109 1444 3154" lang="grc">
