--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0151.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0151.html
@@ -217,9 +217,14 @@
             <ins class="alt" title="nlp 1.00">συμπόται,</ins>
           </span>
         </span>
-        <span id="w_40" class="ocr_word" title="bbox 527 571 638 629" lang="grc">
+        <span id="w_40_0" class="ocr_word" title="bbox 527 571 638 629">
           <span class="alternatives">
-            <ins title="nlp 2.00">[καὶ]</ins>
+            <ins class="alt" title="nlp 2.00">[καὶ]</ins>
+          </span>
+        </span>
+        <span id="w_40_1" class="ocr_word" title="bbox 527 571 638 629">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 670 579 762 623" lang="grc">
@@ -255,11 +260,6 @@
         <span id="w_47" class="ocr_word" title="bbox 1760 574 1984 618" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰσακτέον</ins>
-          </span>
-        </span>
-        <span id="w_48" class="ocr_word" title="bbox 2002 591 2019 619">
-          <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -519,11 +519,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 240 1000 1981 1058">
-        <span id="w_99" class="ocr_word" title="bbox 240 1017 336 1055" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πος,</ins>
-          </span>
-        </span>
         <span id="w_100" class="ocr_word" title="bbox 366 1000 450 1045" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπ’</ins>
@@ -821,9 +816,14 @@
             <ins class="alt" title="nlp 1.00">ἐπεγέγραπτο</ins>
           </span>
         </span>
-        <span id="w_160" class="ocr_word" title="bbox 924 1433 1179 1485" lang="grc">
+        <span id="w_160_0" class="ocr_word" title="bbox 924 1433 1179 1485">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,Περσαῖον</ins>
+            <ins class="alt" title="nlp 2.00">„Περσαῖον</ins>
+          </span>
+        </span>
+        <span id="w_160_1" class="ocr_word" title="bbox 924 1433 1179 1485">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_161" class="ocr_word" title="bbox 1217 1432 1425 1486" lang="grc">
@@ -834,11 +834,6 @@
         <span id="w_162" class="ocr_word" title="bbox 1468 1432 1628 1473" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Κιτιᾶ“</ins>
-          </span>
-        </span>
-        <span id="w_163" class="ocr_word" title="bbox 1671 1433 1983 1487" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεπλανῆσθαι</ins>
           </span>
         </span>
       </span>
@@ -1123,8 +1118,7 @@
         </span>
         <span id="w_220" class="ocr_word" title="bbox 732 1930 869 1973">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_221" class="ocr_word" title="bbox 896 1929 980 1973">
@@ -1211,9 +1205,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_237" class="ocr_word" title="bbox 1798 2004 1979 2044" lang="grc">
+        <span id="w_237_0" class="ocr_word" title="bbox 1798 2004 1979 2044">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πλεῖστα 25</ins>
+            <ins class="alt" title="nlp 2.00">πλεῖστα</ins>
+          </span>
+        </span>
+        <span id="w_237_1" class="ocr_word" title="bbox 1798 2004 1979 2044">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1356,9 +1355,14 @@
             <ins title="nlp 2.00">εἰς</ins>
           </span>
         </span>
-        <span id="w_264" class="ocr_word" title="bbox 663 2287 862 2331" lang="grc">
+        <span id="w_264_0" class="ocr_word" title="bbox 663 2287 862 2331">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἐπάικλα·</ins>
+            <ins class="alt" title="nlp 2.00">ἐπάικλα·</ins>
+          </span>
+        </span>
+        <span id="w_264_1" class="ocr_word" title="bbox 663 2287 862 2331">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 906 2304 1043 2330" lang="grc">
@@ -1384,11 +1388,6 @@
         <span id="w_269" class="ocr_word" title="bbox 1479 2288 1664 2329" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δεῖπνον</ins>
-          </span>
-        </span>
-        <span id="w_270" class="ocr_word" title="bbox 1706 2288 1978 2342" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τραγήματα·</ins>
           </span>
         </span>
       </span>
