--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0152.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0152.html
@@ -575,8 +575,7 @@
         </span>
         <span id="w_112" class="ocr_word" title="bbox 794 1011 931 1054">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_113" class="ocr_word" title="bbox 958 1010 1002 1053">
@@ -624,17 +623,11 @@
         </span>
         <span id="w_121" class="ocr_word" title="bbox 1957 1007 2031 1051">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">So-</ins>
+            <ins title="nlp 2.00">Socratici</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 300 1081 2034 1141">
-        <span id="w_122" class="ocr_word" title="bbox 300 1084 447 1127">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cratici</ins>
-            <del title="nlp 0.90">Socratici</del>
-          </span>
-        </span>
         <span id="w_123" class="ocr_word" title="bbox 479 1081 766 1141">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">dialogorum)</ins>
@@ -1018,15 +1011,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_193" class="ocr_word" title="bbox 1135 1597 1214 1623" lang="grc">
+        <span id="w_193_0" class="ocr_word" title="bbox 1135 1597 1214 1623">
           <span class="alternatives">
-            <ins title="nlp 2.00">κὰτ</ins>
+            <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 1227 1580 1236 1596">
+        <span id="w_193_1" class="ocr_word" title="bbox 1135 1597 1214 1623">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1256 1580 1339 1636" lang="grc">
@@ -1044,16 +1036,16 @@
             <ins class="alt" title="nlp 1.00">παυσάσθωσαν</ins>
           </span>
         </span>
-        <span id="w_198" class="ocr_word" title="bbox 1908 1582 2040 1635" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Περσαῖός</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 252 1650 2041 1708">
-        <span id="w_199" class="ocr_word" title="bbox 252 1675 286 1700">
+        <span id="w_199_0" class="ocr_word" title="bbox 252 1675 286 1700">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00">20</ins>
+          </span>
+        </span>
+        <span id="w_199_1" class="ocr_word" title="bbox 252 1675 286 1700">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_201" class="ocr_word" title="bbox 482 1669 526 1696" lang="grc">
@@ -1101,11 +1093,6 @@
             <ins class="alt" title="nlp 1.00">ἐξ</ins>
           </span>
         </span>
-        <span id="w_210" class="ocr_word" title="bbox 1838 1650 2041 1706" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐμαυτοῦ.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 425 1721 2040 1782">
         <span id="w_211" class="ocr_word" title="bbox 425 1723 522 1767">
@@ -1121,8 +1108,7 @@
         </span>
         <span id="w_213" class="ocr_word" title="bbox 800 1724 938 1767">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 964 1723 1007 1766">
@@ -1348,7 +1334,7 @@
         </span>
         <span id="w_257" class="ocr_word" title="bbox 1261 2008 1366 2064" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοι]</ins>
+            <ins title="nlp 2.00">[τοι]</ins>
           </span>
         </span>
         <span id="w_258" class="ocr_word" title="bbox 1398 2024 1612 2063" lang="grc">
