--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0153.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0153.html
@@ -753,8 +753,7 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1987 1407 2020 1434">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">is</ins>
-            <del title="nlp 0.90">is</del>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -806,16 +805,11 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1842 1478 1964 1518" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τιμη-</ins>
+            <ins title="nlp 2.00">τιμηθῆναι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 218 1533 1964 1592">
-        <span id="w_154" class="ocr_word" title="bbox 218 1542 356 1592" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θῆναι</ins>
-          </span>
-        </span>
         <span id="w_155" class="ocr_word" title="bbox 388 1537 475 1580" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπὸ</ins>
