--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0157.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0157.html
@@ -242,9 +242,9 @@
             <del title="nlp 0.90">(n.</del>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 725 1066 981 1126">
+        <span id="w_41_0" class="ocr_word" title="bbox 725 1066 981 1126">
           <span class="alternatives">
-            <ins title="nlp 2.00">578—580)</ins>
+            <ins class="alt" title="nlp 2.00">578—580)</ins>
           </span>
         </span>
       </span>
