--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0158.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0158.html
@@ -731,9 +731,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_133" class="ocr_word" title="bbox 1912 2071 2046 2126">
+        <span id="w_133_0" class="ocr_word" title="bbox 1912 2071 2046 2126">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τὴν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;τὴν&amp;003E;</ins>
           </span>
         </span>
       </span>
@@ -838,13 +838,7 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1470 2228 1548 2255" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ</ins>
-          </span>
-        </span>
-        <span id="w_154" class="ocr_word" title="bbox 1560 2212 1570 2228">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">κατ’</ins>
           </span>
         </span>
         <span id="w_155" class="ocr_word" title="bbox 1589 2212 1742 2269" lang="grc">
@@ -1244,7 +1238,7 @@
         </span>
         <span id="w_231" class="ocr_word" title="bbox 974 2712 1119 2768" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατὰ]</ins>
+            <ins title="nlp 2.00">[κατὰ]</ins>
           </span>
         </span>
         <span id="w_232" class="ocr_word" title="bbox 1150 2727 1232 2767" lang="grc">
