--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0159.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0159.html
@@ -262,17 +262,11 @@
         </span>
         <span id="w_42" class="ocr_word" title="bbox 1836 645 1946 686">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">anti-</ins>
+            <ins title="nlp 2.00">antiqua,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 206 714 1947 771">
-        <span id="w_43" class="ocr_word" title="bbox 206 730 301 771">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">qtM,</ins>
-            <del title="nlp 0.90">antiqtM,</del>
-          </span>
-        </span>
         <span id="w_44" class="ocr_word" title="bbox 325 729 431 770">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quae</ins>
@@ -420,7 +414,7 @@
         </span>
         <span id="w_69" class="ocr_word" title="bbox 729 927 877 985" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τάχ)α</ins>
+            <ins title="nlp 2.00">τάχ)α</ins>
           </span>
         </span>
         <span id="w_70" class="ocr_word" title="bbox 918 927 1252 984" lang="grc">
@@ -440,7 +434,7 @@
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1567 925 1858 984" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀ|μείνο(νά)</ins>
+            <ins title="nlp 2.00">ἀ|μείνο(νά)</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1902 943 1945 971" lang="grc">
@@ -566,8 +560,7 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 311 1144 317 1198">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 344 1141 749 1200" lang="grc">
@@ -1214,9 +1207,14 @@
             <ins class="alt" title="nlp 1.00">19,</ins>
           </span>
         </span>
-        <span id="w_213" class="ocr_word" title="bbox 1175 2143 1196 2185">
+        <span id="w_213_0" class="ocr_word" title="bbox 1175 2143 1196 2185">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">1—4.</ins>
+          </span>
+        </span>
+        <span id="w_213_1" class="ocr_word" title="bbox 1175 2143 1196 2185">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_216" class="ocr_word" title="bbox 1350 2142 1372 2186" lang="grc">
@@ -1232,11 +1230,6 @@
         <span id="w_218" class="ocr_word" title="bbox 1692 2147 1822 2198" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λόγος</ins>
-          </span>
-        </span>
-        <span id="w_219" class="ocr_word" title="bbox 1871 2158 1956 2187" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
           </span>
         </span>
       </span>
@@ -1320,7 +1313,7 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1200 2286 1288 2342" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ]</ins>
+            <ins title="nlp 2.00">[τὸ]</ins>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 1309 2292 1425 2341">
@@ -1712,19 +1705,19 @@
             <ins class="alt" title="nlp 1.00">ἀληθὲς</ins>
           </span>
         </span>
-        <span id="w_317" class="ocr_word" title="bbox 1563 2786 1804 2841" lang="grc">
+        <span id="w_317_0" class="ocr_word" title="bbox 1563 2786 1804 2841">
           <span class="alternatives">
-            <ins title="nlp 2.00">άναγκαῖόν</ins>
+            <ins class="alt" title="nlp 2.00">ἀναγκαῖόν</ins>
+          </span>
+        </span>
+        <span id="w_317_1" class="ocr_word" title="bbox 1563 2786 1804 2841">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1823 2786 1960 2829" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐστι·“</ins>
-          </span>
-        </span>
-        <span id="w_319" class="ocr_word" title="bbox 1979 2804 2013 2830">
-          <span class="alternatives">
-            <ins title="nlp 2.00">35</ins>
           </span>
         </span>
       </span>
@@ -1774,9 +1767,9 @@
             <ins class="alt" title="nlp 1.00">πολὺ</ins>
           </span>
         </span>
-        <span id="w_329" class="ocr_word" title="bbox 1772 2861 1960 2914" lang="grc">
+        <span id="w_329_0" class="ocr_word" title="bbox 1772 2861 1960 2914">
           <span class="alternatives">
-            <ins title="nlp 2.00">συνηγόπερὶ</ins>
+            <ins class="alt" title="nlp 2.00">συνηγόπερὶ</ins>
           </span>
         </span>
       </span>
