--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0160.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0160.html
@@ -752,9 +752,14 @@
             <ins title="nlp 2.00">15,</ins>
           </span>
         </span>
-        <span id="w_131" class="ocr_word" title="bbox 1358 1329 1412 1334">
+        <span id="w_131_0" class="ocr_word" title="bbox 1358 1329 1412 1334">
           <span class="alternatives">
-            <ins title="nlp 2.00">34—35.</ins>
+            <ins class="alt" title="nlp 2.00">34—35.</ins>
+          </span>
+        </span>
+        <span id="w_131_1" class="ocr_word" title="bbox 1358 1329 1412 1334">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1532 1305 1628 1347">
@@ -767,12 +772,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eius</ins>
             <del title="nlp 0.90">eius</del>
-          </span>
-        </span>
-        <span id="w_135" class="ocr_word" title="bbox 1809 1304 2062 1346">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">suhstantiae</ins>
-            <del title="nlp 0.90">suhstantiae</del>
           </span>
         </span>
       </span>
@@ -1595,9 +1594,9 @@
             <ins class="alt" title="nlp 2.00">892b</ins>
           </span>
         </span>
-        <span id="w_281" class="ocr_word" title="bbox 1875 2621 2057 2663">
+        <span id="w_281_0" class="ocr_word" title="bbox 1875 2621 2057 2663">
           <span class="alternatives">
-            <ins title="nlp 2.00">14—23.</ins>
+            <ins class="alt" title="nlp 2.00">14—23.</ins>
           </span>
         </span>
       </span>
@@ -1706,8 +1705,7 @@
         </span>
         <span id="w_302" class="ocr_word" title="bbox 1987 2762 2058 2805">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xal</ins>
-            <del title="nlp 0.90">xal</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -1794,9 +1792,9 @@
             <del title="nlp 0.90">substantiae</del>
           </span>
         </span>
-        <span id="w_318" class="ocr_word" title="bbox 1809 2896 2057 2945">
+        <span id="w_318_0" class="ocr_word" title="bbox 1809 2896 2057 2945">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Cleanthis&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;Cleanthis&amp;x003E;</ins>
           </span>
         </span>
       </span>
@@ -2012,17 +2010,11 @@
         </span>
         <span id="w_357" class="ocr_word" title="bbox 1953 3067 2058 3092">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">voca-</ins>
+            <ins title="nlp 2.00">vocatur.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 330 3109 2059 3156">
-        <span id="w_358" class="ocr_word" title="bbox 330 3112 402 3145">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tur.</ins>
-            <del title="nlp 0.90">vocatur.</del>
-          </span>
-        </span>
         <span id="w_359" class="ocr_word" title="bbox 498 3114 540 3144">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">31</ins>
@@ -2106,9 +2098,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_373" class="ocr_word" title="bbox 536 3167 732 3198">
+        <span id="w_373_0" class="ocr_word" title="bbox 536 3167 732 3198">
           <span class="alternatives">
-            <ins title="nlp 2.00">360—365,</ins>
+            <ins class="alt" title="nlp 2.00">360—365.</ins>
           </span>
         </span>
       </span>
